# six-seven

./: .gitignore  README.md  __main__.py  audio.py  detector.py  pyproject.toml
sixseven/: __init__.py  __main__.py  app.py  config.py
sixseven/core/: audio.py  camera.py  detector.py  virtual_cam.py
sixseven/ui/: main_window.py  styles.py
