[project]
name = "sixseven"
version = "6.7"
description = "A cross-platform Python program utilizing computer vision to detect SIXSEVEN gesture movements and trigger asynchronous audio overlays"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mediapipe==0.10.9",
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
