[project]
name = "sixseven"
version = "2.0.0"
description = "Gesture-driven audio overlay with PySide6 UI, system tray, and virtual camera output for Discord"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "mediapipe>=0.10.13",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "PySide6>=6.6",
]

[project.optional-dependencies]
virtualcam = ["pyvirtualcam>=0.4"]

[project.scripts]
sixseven = "sixseven.app:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
